Second version. Responsive design

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="es">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
@@ -58,10 +59,10 @@
           <section id="home" class="home">
             <div class="home-container container">
               <div class="row">
-                <div class="col-8 offset-2 text-center">
+                <div class="col-10 offset-1 text-center">
                   <img src="img/avatar.png" class="rounded-circle img-fluid">
-                  <h4>Mercè Casamitjana</h4>
-                  <p>Desarrollo frontend</p>
+                  <h2>Mercè Casamitjana</h2>
+                  <h4 class="mb-3">Desarrollo frontend</h4>
                   <div class="social-media">
                     <a href="https://github.com/Merce-ksa/" target="_blank" class="icon-github1"></a>
                     <a href="https://www.instagram.com/ksamijana/?hl=es/" target="_blank" class="icon-instagram1"></a>
@@ -190,8 +191,8 @@
                                 <br>Platzi
                               </p>
                               <p>
-                                En este curso he recibido clases de Prerpocesadores HTML y CSS, Sass, Bootstrap y Animaciones web.
-                                <br>Actualmente, sigo mi formación de este módulo.
+                                En el módulo intermedio, he cursado clases de Prerpocesadores HTML y CSS, Sass, Bootstrap y Animaciones web.
+                                <br>Actualmente, sigo la formación de este módulo con las clases de PostCSS, Foundation y Materialize.
                               </p>
                     				</li>
                     			</ul>
