hero and timeline

--- a/index.html
+++ b/index.html
@@ -160,16 +160,18 @@
                     			<h4>Estudios</h4>
                     			<ul class="timeline timline-studies">
                     				<li>
-                    					<p>Diplomatura de Ingeniería Técnica en Topografía
-                    					<span class="float-right">2011</span>
-                              <br>Universidad Politécnica de Cataluña
-                              </p>
+                              <div class="company">
+                                <p class="company-work">Diplomatura de Ingeniería Técnica en Topografía</p>
+                                <p class="company-name">Universidad Politécnica de Cataluña</p>
+                                <p class="company-date">2011</p>
+                              </div>
                     				</li>
                     				<li>
-                              <p>Bachillerato
-                              <span class="float-right">2004</span>
-                              <br>C.E.Valldaura
-                              </p>
+                              <div class="company">
+                                <p class="company-work">Bachillerato</p>
+                                <p class="company-name">C.E.Valldaura</p>
+                                <p class="company-date">2004</p>
+                              </div>
                             </li>
                     			</ul>
 
@@ -177,23 +179,32 @@
 
                           <ul class="timeline timline-courses">
                     				<li>
-                    					<p>Arquitectura Frontend - Básico
-                      					<span class="float-right">2020</span>
-                                <br>Platzi
-                              </p>
-                              <p>
-                                En este curso he recibido clases de HTML, CSS, CSS Grid Layout, Responsive Design, Fundammentos de JavaScritp, JQuery y Git y GitHub.
-                              </p>
+                              <div class="company">
+                                <p class="company-work">Arquitectura Frontend - Básico</p>
+                                <p class="company-name">Platzi</p>
+                                <p class="company-date">2020</p>
+                                <p>
+                                  En este curso he recibido clases de HTML, CSS,
+                                  CSS Grid Layout, Responsive Design, Fundammentos
+                                  de JavaScritp, JQuery y Git y GitHub.
+                                </p>
+                              </div>
                     				</li>
                             <li>
-                    					<p>Arquitectura Frontend - Intermedio
-                      					<span class="float-right">2020</span>
-                                <br>Platzi
-                              </p>
-                              <p>
-                                En el módulo intermedio, he cursado clases de Prerpocesadores HTML y CSS, Sass, Bootstrap y Animaciones web.
-                                <br>Actualmente, sigo la formación de este módulo con las clases de PostCSS, Foundation y Materialize.
-                              </p>
+                              <div class="company">
+                                <p class="company-work">Arquitectura Frontend - Intermedio</p>
+                                <p class="company-name">Platzi</p>
+                                <p class="company-date">2020</p>
+                                <p>
+                                  En el módulo intermedio, he cursado clases de
+                                  Prerpocesadores HTML y CSS, Sass, Bootstrap y
+                                  Animaciones web.
+                                  <br>
+                                  <br>Actualmente, sigo la formación de este
+                                  módulo con las clases de PostCSS, Foundation
+                                  y Materialize.
+                                </p>
+                              </div>
                     				</li>
                     			</ul>
                     		</div>
