--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <div class="scroll-down row">
                 <div class="col">
                   <div class="col-12 text-center">
-                    <a href="#about" class="btn-scroll-down btn" type="button"></a>
+                    <a href="#about" class="btn-scroll-down btn"></a>
                   </div>
                 </div>
 
