add Laboite project

--- a/index.html
+++ b/index.html
@@ -347,6 +347,20 @@
               </div>
 
               <div class="work-card card">
+                <img src="img/project-laboite.png" class="card-img-top">
+                <div class="work-card-overlay">
+                  <p class="h4">LaBôite</p>
+                  <span class="badge" style="background-color: #28a745">HTML</span>
+                  <span class="badge" style="background-color: #17a2b8">Bootstrap</span>
+                  <span class="badge" style="background-color: #ff4c60">CSS</span>
+                  <div class="links-github mt-3">
+                    <span><a class="link-github mr-2" href="https://github.com/Merce-ksa/LaBoite" target="_blank"></a></span>
+                    <span><a class="link-web ml-2" href="https://merce-ksa.github.io/LaBoite/" target="_blank"></a></span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="work-card card">
                 <img src="img/project-porfolio.png" class="card-img-top">
                 <div class="work-card-overlay">
                   <p class="h4">Porfolio</p>
