Add work myWeather

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
-
+    <link rel="icon" href="img/favicon.ico" type="image/png" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/animations.css">
@@ -299,6 +299,19 @@
             <div class="row row-works ml-2 mr-2">
 
               <div class="work-card card">
+                <img src="img/project-myweather.png" class="card-img-top">
+                <div class="work-card-overlay">
+                  <p class="h4">myWeather</p>
+                  <span class="badge" style="background-color: #61dafb">React</span>
+                  <span class="badge" style="background-color: #ff5527">SASS</span>
+                  <div class="links-github mt-3">
+                    <span><a class="link-github mr-2" href="https://github.com/Merce-ksa/myWeather" target="_blank"></a></span>
+                    <span><a class="link-web ml-2" href="https://unruffled-banach-7d4357.netlify.app/" target="_blank"></a></span>
+                  </div>
+                </div>
+              </div>
+              
+              <div class="work-card card">
                 <img src="img/project-animals.png" class="card-img-top">
                 <div class="work-card-overlay">
                   <p class="h4">Animals</p>
@@ -364,20 +377,6 @@
                   <div class="links-github mt-3">
                     <span><a class="link-github mr-2" href="https://github.com/Merce-ksa/Izeland" target="_blank"></a></span>
                     <span><a class="link-web ml-2" href="https://merce-ksa.github.io/Izeland/index.html" target="_blank"></a></span>
-                  </div>
-                </div>
-              </div>
-
-              <div class="work-card card">
-                <img src="img/project-sunglasses.png" class="card-img-top">
-                <div class="work-card-overlay">
-                  <p class="h4">Sun glasses</p>
-                  <span class="badge" style="background-color: #0574c4">Animations</span>
-                  <span class="badge" style="background-color: #28a745">HTML</span>
-                  <span class="badge" style="background-color: #ff4c60">CSS</span>
-                  <div class="links-github mt-3">
-                    <span><a class="link-github mr-2" href="https://github.com/Merce-ksa/SunGlasses" target="_blank"></a></span>
-                    <span><a class="link-web ml-2" href="https://merce-ksa.github.io/SunGlasses/" target="_blank"></a></span>
                   </div>
                 </div>
               </div>
