--- a/index.html
+++ b/index.html
@@ -310,6 +310,21 @@
                   </div>
                 </div>
               </div>
+
+              <div class="work-card card">
+                <img src="img/project-wag.png" class="card-img-top">
+                <div class="work-card-overlay">
+                  <p class="h4">WAG</p>
+                  <span class="badge" style="background-color: #61dafb">React Native</span>
+                  <span class="badge" style="background-color: #764abc">Redux</span>
+                  <span class="badge" style="background-color: #eed81a">Express</span>
+                  <span class="badge" style="background-color: #54a647">Mongoose</span>
+                  <span class="badge" style="background-color: #27af60">Passport js</span>
+                  <div class="links-github mt-3">
+                    <span><a class="link-github mr-2" href="https://github.com/Merce-ksa/wag" target="_blank"></a></span>
+                  </div>
+                </div>
+              </div>
               
               <div class="work-card card">
                 <img src="img/project-animals.png" class="card-img-top">
