--- a/index.html
+++ b/index.html
@@ -312,6 +312,20 @@
               </div>
 
               <div class="work-card card">
+                <img src="img/project-atriviate.png" class="card-img-top">
+                <div class="work-card-overlay">
+                  <p class="h4">myWeather</p>
+                  <span class="badge" style="background-color: #61dafb">React</span>
+                  <span class="badge" style="background-color: #764abc">Redux</span>
+                  <span class="badge" style="background-color: #ff5527">SASS</span>
+                  <div class="links-github mt-3">
+                    <span><a class="link-github mr-2" href="https://github.com/Merce-ksa/atriviateGame" target="_blank"></a></span>
+                    <span><a class="link-web ml-2" href="https://atriviate.netlify.app/" target="_blank"></a></span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="work-card card">
                 <img src="img/project-wag.png" class="card-img-top">
                 <div class="work-card-overlay">
                   <p class="h4">WAG</p>
