Fix myWeather link

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                   <span class="badge" style="background-color: #ff5527">SASS</span>
                   <div class="links-github mt-3">
                     <span><a class="link-github mr-2" href="https://github.com/Merce-ksa/myWeather" target="_blank"></a></span>
-                    <span><a class="link-web ml-2" href="https://unruffled-banach-7d4357.netlify.app/" target="_blank"></a></span>
+                    <span><a class="link-web ml-2" href="https://my-weather-location.netlify.app" target="_blank"></a></span>
                   </div>
                 </div>
               </div>
