--- a/index.html
+++ b/index.html
@@ -326,6 +326,19 @@
               </div>
 
               <div class="work-card card">
+                <img src="img/project-cactus-desert-cart.png" class="card-img-top">
+                <div class="work-card-overlay">
+                  <p class="h4">Cactus desert - cart</p>
+                  <span class="badge" style="background-color: #61dafb">React Native</span>
+                  <span class="badge" style="background-color: #764abc">Redux</span>
+                  <span class="badge" style="background-color: #27af60">mockapi</span>
+                  <div class="links-github mt-3">
+                    <span><a class="link-github mr-2" href="https://github.com/Merce-ksa/cactus-desert-cart" target="_blank"></a></span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="work-card card">
                 <img src="img/project-wag.png" class="card-img-top">
                 <div class="work-card-overlay">
                   <p class="h4">WAG</p>
