--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
               <div class="work-card card">
                 <img src="img/project-atriviate.png" class="card-img-top">
                 <div class="work-card-overlay">
-                  <p class="h4">myWeather</p>
+                  <p class="h4">aTríviate</p>
                   <span class="badge" style="background-color: #61dafb">React</span>
                   <span class="badge" style="background-color: #764abc">Redux</span>
                   <span class="badge" style="background-color: #ff5527">SASS</span>
