Redesign the Tools section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
                   <h4 class="mb-3">Desarrollo frontend</h4>
                   <div class="social-media">
                     <a href="https://github.com/Merce-ksa/" target="_blank" class="icon-github1"></a>
-                    <a href="https://www.instagram.com/ksamijana/?hl=es/" target="_blank" class="icon-instagram1"></a>
                     <a href="https://www.linkedin.com/in/merc%C3%A8-casamitjana-agraz/" target="_blank" class="icon-linkedin"></a>
                   </div>
                 </div>
@@ -141,7 +140,7 @@
                             <li>
                               <div class="company">
                                 <p class="company-work">Full-stack developer</p>
-                                <p class="company-name">Skylab Coders Academy</p>
+                                <p class="company-name">ISDI Coders</p>
                                 <p class="company-date">Enero 2021 - Marzo 2021</p>
                                 <br>
                                 <p>
@@ -238,6 +237,60 @@
             <h3 class="section-title">Herramientas</h3>
             <div class="row row-tools justify-content-around align-items-center ml-2 mr-2">
               <div class="col-md-8 col-lg-5 mt-2 mb-2">
+                <div class="tools">
+                  <img src="img/tools-js.png" class="tool-icon">
+                  <p class="category-title">JavaScript</p>
+                </div>
+                <div class="tools">
+                  <img src="img/tools-ts.png" class="tool-icon">
+                  <p class="category-title">TypeScript</p>
+                </div>
+                <div class="tools">
+                  <img src="img/tools-react.png" class="tool-icon">
+                  <p class="category-title">React</p>
+                </div>
+                <div class="tools">
+                  <img src="img/tools-react.png" class="tool-icon">
+                  <p class="category-title">React Native</p>
+                </div>
+                <div class="tools">
+                  <img src="img/tools-redux.png" class="tool-icon">
+                  <p class="category-title">Redux</p>
+                </div>
+              </div>
+              <div class="col-md-8 col-lg-5 mt-2 mb-2">
+                <div class="tools">
+                  <img src="img/tools-jest.png" class="tool-icon">
+                  <p class="category-title">Jest</p>
+                </div>
+                <div class="tools">
+                  <img src="img/tools-testing-library.png" class="tool-icon">
+                  <p class="category-title">Testing Library</p>
+                </div>
+                <div class="tools">
+                  <img src="img/tools-html.png" class="tool-icon">
+                  <p class="category-title">HTML</p>
+                </div>
+                <div class="tools">
+                  <img src="img/tools-css.png" class="tool-icon">
+                  <p class="category-title">CSS</p>
+                </div>
+                <div class="tools">
+                  <img src="img/tools-bootstrap.png" class="tool-icon">
+                  <p class="category-title">Bootstrap</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>  
+        <!--
+
+              
+        <section id="tools">
+          <div class="container">
+            <h3 class="section-title">Herramientas</h3>
+            <div class="row row-tools justify-content-around align-items-center ml-2 mr-2">
+              <div class="col-md-8 col-lg-5 mt-2 mb-2">
                 <div class="category">
                   <p class="category-title">HTML 🧡</p>
                   <p class="stars">⭐️ ⭐️ ⭐️ ⭐️<span class="stars-disabled"> ★</span></p>
@@ -291,7 +344,9 @@
               </div>
             </div>
           </div>
-        </section>        
+        </section>  
+        
+        -->
 
         <section id="works">
           <div class="container-works container">
