Create the new studies section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
               <a class="nav-link" class="nav-link" href="#about">Acerca de</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#experience">Experiencia</a>
+              <a class="nav-link" href="#studies">Estudios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#experience">Experiencia profesional</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#tools">Herramientas</a>
@@ -113,117 +116,114 @@
           </div>
         </section>
 
-        <section id="experience">
+        <section id="studies">
           <div class="container">
-            <h3 class="section-title">Experiencia</h3>
+            <h3 class="section-title">Estudios</h3>
 
             <div class="row experience-content ml-2 mr-2">
-
-              <div class="studies col-lg-6 col-md-12">
-                    <div class="container mt-5 mb-5">
-                    	<div class="row">
-                    		<div class="col-md-12">
-                    			<h4>Estudios</h4>
-                    			<ul class="timeline timline-studies">
-                    				<li>
-                              <div class="company">
-                                <p class="company-work">Diplomatura de Ingeniería Técnica en Topografía</p>
-                                <p class="company-name">Universidad Politécnica de Cataluña</p>
-                                <p class="company-date">2011</p>
-                              </div>
-                    				</li>
-                    			</ul>
-
-                          <h4>Cursos de especialización</h4>
-
-                          <ul class="timeline timline-courses">
-                            <li>
-                              <div class="company">
-                                <p class="company-work">Full-stack developer</p>
-                                <p class="company-name">ISDI Coders</p>
-                                <p class="company-date">Enero 2021 - Marzo 2021</p>
-                                <br>
-                                <p>
-                                  <b>Frontend</b> En esta primera parte he trabajado con HTML5, CSS3 y Sass utilizando la 
-                                  metodología BEM. Javascript ES6, promesas | Async-Await. He realizado proyectos con 
-                                  las tecnologías de React JS y Redux. 
-                                </p>
-                                <p>
-                                  <b>Backend</b> En la segunda parte del curso con Node JS, Express para la configuración del servidor, 
-                                  Mongoose como cliente de MongoDB.
-                                </p>
-                                <p>
-                                  <b>Proyecto final</b> Para realizar el proyecto, desarrollé una aplicacion móvil en React Native.
-                                </p>
-                                <p>
-                                  Durante todo el curso, el control de versiones se ha realizado Git y GitHub. Testing con Jest aplicando TDD. Evaluación de código
-                                  SonarQube.
-                                </p>
-                              </div>
-                    				</li>
-                    				<li>
-                              <div class="company">
-                                <p class="company-work">Arquitectura Frontend - Básico</p>
-                                <p class="company-name">Platzi</p>
-                                <p class="company-date">2020</p>
-                                <br>
-                                <p>
-                                  En este curso he recibido clases de HTML, CSS,
-                                  CSS Grid Layout, Responsive Design, Fundammentos
-                                  de JavaScritp, JQuery y Git y GitHub.
-                                </p>
-                              </div>
-                    				</li>
-                    			</ul>
-                    		</div>
-                    	</div>
-                    </div>
-              </div>
-              <div class="experience-works col-lg-6 col-md-12 mt-3 mt-lg-0">
+              <div class="experience-works col-lg-12 col-md-12 mt-3 mt-lg-0">
                 <div class="container mt-5 mb-5">
                   <div class="row">
                     <div class="col-12">
-                      <h4>Experiencia profesional</h4>
-                      <ul class="timeline timline-works">
-                        <li>
-                          <div class="company">
-                            <p class="company-work">Redactora de contenidos matemáticos</p>
-                            <p class="company-name">Tekman Education</p>
-                            <p class="company-date">Abril 2017 - Noviembre 2019</p>
-                          </div>
-                          <p>Coordinación del proyecto de actividades digitales.
-                          <br>Autoría y diseño de actividades para plataforma digital.                         
-                          <br>Redacción de contenido y desarrollo de actividades gamificadas para primaria.
-                          </p>
-                          <br>
-                        </li>
-                        <li>
-                          <div class="company">
-                            <p class="company-work">Redactora</p>
-                            <p class="company-name">AulaPlaneta</p>
-                            <p class="company-date">Marzo 2019 - Agosto 2019</p>
-                          </div>
-                          <p>Redacción de recursos de ciencias de la naturaleza
+                      <h5>Estudios</h5>
+                      <div class="company">
+                        <div class="company-header">
+                          <p class="company-work">Ingeniería Técnica en Topografía</p>
+                          <p class="company-name">Universidad Politécnica de Cataluña</p>
+                          <p class="company-date">2011</p>
+                        </div>                        
+                      </div>
+                      <h5>Cursos de especialización</h5>
+                      <div class="company">
+                        <div class="company-header">
+                          <p class="company-work">Fullstack developer</p>
+                          <p class="company-name">ISDI Coders</p>
+                          <p class="company-date">Septiembre 2020 - Marzo 2021</p>
+                        </div>                        
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section id="experience">
+          <div class="container">
+            <h3 class="section-title">Experiencia profesional</h3>
+
+            <div class="row experience-content ml-2 mr-2">
+              <div class="experience-works col-lg-12 col-md-12 mt-3 mt-lg-0">
+                <div class="container mt-5 mb-5">
+                  <div class="row">
+                    <div class="col-12">
+                      <div class="company">
+                        <div class="company-header">
+                          <p class="company-work">Mobile Developer</p>
+                          <p class="company-name">Drinks&Co</p>
+                          <p class="company-date">Noviembre 2021 - Junio 2023</p>
+                        </div>
+                        <p class="company-description">
+                          Desarrollo y mejora continua de las aplicaciones para el marketplace de Drinks&Co y Bodeboca.
+                        </p>
+                        <ul>
+                          <li>Desarrollo front end con React Native y Redux para la implementación del estado.</li>
+                          <li>Typescript.</li>
+                          <li>Testing con Jest y React Testing Library.</li>
+                          <li>Familiarización con las stores de Apple y Android.</li>
+                        </ul>
+                      </div>
+                      <div class="company">
+                        <div class="company-header">
+                          <p class="company-work">Frontend Developer</p>
+                          <p class="company-name">Seidor</p>
+                          <p class="company-date">Junio 2021 - Noviembre 2021</p>
+                        </div>
+                        <p class="company-description">
+                          Implementación y desarrollo de proyectos colaborando de forma conjunta con el equipo de diseño y el equipo de backend.
+                        </p>
+                        <ul>
+                          <li>React y Next js.</li>
+                          <li>Html, CSS, SASS y Bootstrap.</li>
+                        </ul>
+                      </div>
+                      <div class="company">
+                        <div class="company-header">
+                          <p class="company-work">Redactora de contenidos matemáticos</p>
+                          <p class="company-name">Tekman Education</p>
+                          <p class="company-date">Abril 2017 - Noviembre 2019</p>
+                        </div>
+                        <ul>
+                          <li>Coordinación del proyecto de actividades digitales.</li>
+                          <li>Autoría y diseño de actividades para plataforma digital. </li>
+                          <li>Redacción de contenido y desarrollo de actividades gamificadas para primaria.</li>
+                        </ul>
+                      </div>
+                      <div class="company">
+                        <div class="company-header">
+                          <p class="company-work">Redactora</p>
+                          <p class="company-name">AulaPlaneta</p>
+                          <p class="company-date">Marzo 2019 - Agosto 2019</p>
+                        </div>
+                        <ul>
+                          <li>Redacción de recursos de ciencias de la naturaleza
                             basados en la rueda de aprendizaje y las tecnologías TIC.
-                          </p>
-                          <br>
-                        </li>
-                        <li>
-                          <div class="company">
-                            <p class="company-work">Investigación y desarrollo</p>
-                            <p class="company-name">Cultura Itinerant</p>
-                            <p class="company-date">Octubre 2014- Octubre2016</p>
-                          </div>
-                          <p>
-                            <br>Desarrollo de aplicaciones Android.
-                            <br>Maquetación web.
-                            <br>Gestión de comunidades en línea.
-                            <br>Coordinación de equipos de educadores.
-                            <br>Autoría de contenido pedagógico.  
-                            <br>Educadora cultural.
-                          </p>
-                        </li>
-                      </ul>
+                          </li>
+                        </ul>
+                      </div>
+                      <div class="company">
+                        <div class="company-header">
+                          <p class="company-work">Investigación y desarrollo</p>
+                          <p class="company-name">Cultura Itinerant</p>
+                          <p class="company-date">Octubre 2014- Octubre2016</p>
+                        </div>
+                        <ul>
+                          <li>Planificación, diseño y desarrollo de la página web.</li>
+                          <li>Coordinación de equipos de educadores.</li>
+                          <li>Autoría de contenido pedagógico y educadora cultural.</li>
+                        </ul>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -283,71 +283,6 @@
             </div>
           </div>
         </section>  
-        <!--
-
-              
-        <section id="tools">
-          <div class="container">
-            <h3 class="section-title">Herramientas</h3>
-            <div class="row row-tools justify-content-around align-items-center ml-2 mr-2">
-              <div class="col-md-8 col-lg-5 mt-2 mb-2">
-                <div class="category">
-                  <p class="category-title">HTML 🧡</p>
-                  <p class="stars">⭐️ ⭐️ ⭐️ ⭐️<span class="stars-disabled"> ★</span></p>
-                </div>
-                <div class="category">
-                  <p class="category-title">CSS3 💙</p>
-                  <p class="stars">⭐️ ⭐️ ⭐️ ⭐️<span class="stars-disabled"> ★</span></p>
-                </div>
-                <div class="category">
-                  <p class="category-title">SASS 💃🏻</p>
-                  <p class="stars">⭐️ ⭐️ ⭐️<span class="stars-disabled"> ★ ★</span></p>
-                </div>
-                <div class="category">
-                  <p class="category-title">JavaScript 🥰</p>
-                  <p class="stars">⭐️ ⭐️ ⭐️<span class="stars-disabled"> ★ ★</span></p>
-                </div>
-                <div class="category">
-                  <p class="category-title">Bootstrap 👍🏼</p>
-                  <p class="stars">⭐️ ⭐️<span class="stars-disabled"> ★ ★ ★</span></p>
-                </div>
-                <div class="category">
-                  <p class="category-title">PUG 🙃</p>
-                  <p class="stars">⭐️ ⭐️<span class="stars-disabled"> ★ ★ ★</span></p>
-                </div>
-              </div>
-              <div class="col-md-8 col-lg-5 mt-2 mb-2">
-                <div class="category">
-                  <p class="category-title">React 🦾</p>
-                  <p class="stars">⭐️ ⭐️ ⭐️<span class="stars-disabled"> ★ ★</span></p>
-                </div>
-                <div class="category">
-                  <p class="category-title">Redux 👌🏼</p>
-                  <p class="stars">⭐️ ⭐️<span class="stars-disabled"> ★ ★ ★</span></p>
-                </div>
-                <div class="category">
-                  <p class="category-title">React Native 😊</p>
-                  <p class="stars">⭐️ ⭐️ ⭐️<span class="stars-disabled"> ★ ★</span></p>
-                </div>
-                <div class="category">
-                  <p class="category-title">Express 🧐</p>
-                  <p class="stars">⭐️ ⭐️ <span class="stars-disabled"> ★ ★ ★</span></p>
-                </div>
-                <div class="category">
-                  <p class="category-title">Mongoose 👩🏽‍💻</p>
-                  <p class="stars">⭐️ ⭐️<span class="stars-disabled"> ★ ★ ★</span></p>
-                </div>
-                <div class="category">
-                  <p class="category-title">Jest 👩🏽‍💻</p>
-                  <p class="stars">⭐️ ⭐️<span class="stars-disabled"> ★ ★ ★</span></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>  
-        
-        -->
-
         <section id="works">
           <div class="container-works container">
             <h3 class="section-title">Trabajos</h3>
