--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                   <div class="social-media">
                     <a href="https://github.com/Merce-ksa/" target="_blank" class="icon-github1"></a>
                     <a href="https://www.linkedin.com/in/merc%C3%A8-casamitjana-agraz/" target="_blank" class="icon-linkedin"></a>
+                    <a href="./docs/CV_Merce_Casamitjana.pdf" download="curriculum"><img src="img/cv.png" class="cv"></a>
                   </div>
                 </div>
               </div>
