Add new summary

--- a/index.html
+++ b/index.html
@@ -98,15 +98,14 @@
 
               <div class="col col-md-8 col-lg-8">
                 <p>
-                  ¡Hola, soy Mercè! Te voy a contar una pequeña historia. Desde
-                  que entré en el mundo laboral, me he dedicado al sector de la educación,
-                  pero un día me ofrecieron la oportunidad de maquetar una página web en HTML y CSS y
-                  descubrí cuán atractivo es el mundo del desarrollo frontend. Y si algo te gusta,
-                  ¿por qué no lanzarse a ello?
+                  ¡Hola, soy Mercè! Comencé mi carrera en el mundo de la educación y el sector editorial. 
+                  Esta experiencia me enseñó la importancia de la comunicación efectiva, la atención al detalle y la capacidad para trabajar en equipo. 
+                  Sin embargo, mientras trabajaba en proyectos educativos, comencé a sentir curiosidad por el potencial de las 
+                  tecnologías digitales para mejorar la experiencia de aprendizaje. 
+                  Este interés me llevó a explorar el campo de la programación como desarrolladora frontend.
                   <br>
-                  <br>Así que en el último año me he formado y he trabajado en una serie de proyectos
-                  utilizando diversas tecnologías, como, por ejemplo React, Redux o React Native en el lado del frontend y Express 
-                  y Mongoose en backend. Hoy os quiero presentar el resultado de los proyectos en este porfolio.
+                  <br>He descubierto que me fascina programar, seguir buenas prácticas y poder aportar soluciones o mejoras en cada proyecto, 
+                  así como trabajar en equipo para continuar con mi aprendizaje.
                 </p>
               </div>
               <div class="col-12 text-center pt-2 pb-4">
