--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 
                     <div class="card-contact card mt-3 pt-5 pb-5  pl-0 pr-0 text-center">
                       <p class="icon-map"></p>
-                      <a>Barcelona</a>
+                      <a>San Sebastián</a>
                     </div>
                   </div>
                 </div>
