--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                   ¡Hola, soy Mercè! Comencé mi carrera en el mundo de la educación y el sector editorial. 
                   Esta experiencia me enseñó la importancia de la comunicación efectiva, la atención al detalle y la capacidad para trabajar en equipo. 
                   Sin embargo, mientras trabajaba en proyectos educativos, comencé a sentir curiosidad por el potencial de las 
-                  tecnologías digitales para mejorar la experiencia de aprendizaje. 
+                  tecnologías digitales para mejorar la experiencia de aprendizaje y crear productos utilizando la programacion web. 
                   Este interés me llevó a explorar el campo de la programación como desarrolladora frontend.
                   <br>
                   <br>He descubierto que me fascina programar, seguir buenas prácticas y poder aportar soluciones o mejoras en cada proyecto, 
